<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.studyjamscn.s1.sj32.lizhijun.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            style="@style/ButtonStyle"
            android:text="@string/BMI"
            android:onClick="openBMI"/>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/heat_consumption"
            android:onClick="openHeat"/>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/weight_loss_time"
            android:onClick="openWeightLoss"/>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/heart_rate"
            android:onClick="openHeartRate"/>

    </LinearLayout>
</ScrollView>