<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.lizhijun.android.fit_tool.BMIActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/bmi_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bmi0"/>
            <TextView
                android:id="@+id/bmi_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text=""/>
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_bmi_weight"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_bmi_height"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_calc"
            android:onClick="calculateBMI"/>
    </LinearLayout>
</ScrollView>